- Now using call getFirst(); instead of get(0); - Removes unused imports - Adds more null checks - Teleportation is actually good. Forgot the registration was removed for testing